--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -9,40 +9,64 @@ html {
 	font-family:Giddyup Std;
 	font-size:42px;
 	font-weight:bold;
-	padding-left:30%;
+	padding-left:35%;
 }
-div.menuDiv {
+table.mainContentDiv {
+	display:inline;
+}
+table.mainContentDiv tr td.menuDiv {
 	text-align:center;
-	padding-left:20%;
+	padding-left:5%;
 	white-space:nowrap;
+	float:left;
 }
 div.buttonDiv {
 	padding-right:30px;
-	float:left;			
+	clear:both;			
 }
 .menuButton {
 	border:2px solid #0081EC;
-	border-radius:25px;
+	border-radius:15px;
 	-moz-border-radius:25px;
 	padding:5px;
-	background-color:#D7E3F1;
-	color:#0089EF;
+	background:rgb(221, 231, 243);
+	background:rgba(221, 231, 243, 0.7);
+	color:#0F38DC;
 	font-weight:bold;
 	font-family:Comic Sans MS;
 	font-size:12pt;
 	cursor:pointer;
+	width:250px;
+	margin-bottom:2px;
 }
-div.contentDiv {
-	clear:both;
-	padding-left:20%;
-	padding-top:30px;
-	width:500px;
-}
-span.contentText {
-	font-family:Comic Sans MS;
-	/*color:#153E7E;		*/
+.menuButtonOnHover {
+	border:2px solid blue;
+	border-radius:15px;
+	-moz-border-radius:25px;
+	padding:5px;
+	background:rgb(0, 134, 234);
+	background:rgba(0, 134, 234, 0.7);
 	color:white;
+	font-weight:bold;
+	font-family:Comic Sans MS;
+	font-size:12pt;
+	cursor:pointer;
+	width:250px;
+	margin-bottom:2px;
 }
-a.link {
-	
+table.mainContentDiv tr td.contentDiv {
+	margin-left:25%;
+	background:rgb(221, 231, 243);
+	background:rgba(221, 231, 243, 0.6);
+	width:900px;	
+	min-height:400px;
+}
+div.innerContentDiv {
+	padding:20px;
+}
+div.innerContentDiv span.contentText {
+	font-family:Comic Sans MS;
+	color:#0F38DC;
+	font-weight:bold;
+	width:500px;
 }
